crates/nirvash-macros/tests/fixtures/code_tests_legacy_fresh.stderr
error: fresh = ... is no longer supported; use binding = ... and implement fresh_runtime() on ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_fresh.rs:129:46
    |
129 | #[code_tests(spec = Spec, binding = Binding, fresh = tests::fresh_driver)]
    |                                              ^^^^^
